--- a/css/sale.css
+++ b/css/sale.css
@@ -50,18 +50,18 @@ body {
   background: #fff;
   padding: 20px;
 }
-.caffee_menu_list_item {
+.coffee_menu_list_item {
   width: 49%;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
   padding: 10px;
 }
-.caffee_menu_image {
+.coffee_menu_image {
   width: 20%;
   border-radius: 50%;
 }
-.caffee_menu_content {
+.coffee_menu_content {
   width: 80%;
   padding: 10px;
 }
