--- a/css/sale.css
+++ b/css/sale.css
@@ -1,3 +1,81 @@
+@charset "utf-8";
+
+.header_nav {
+  width: 100%;
+  height: 60px;
+  background: linear-gradient(90deg, #fff 20%, rgba(0, 0, 0, 0.6) 60%);
+  /* background: rgba(0, 0, 0, 0.6); */
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: stretch;
+  position: fixed;
+  z-index: 10;
+}
+
+.logo {
+  width: 120px;
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  width: 100%;
+}
+
+.global_nav {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: stretch;
+}
+
+.global_nav_item {
+  color: #fff;
+  text-decoration: none;
+  align-items: center;
+  display: flex;
+  padding: 0 20px;
+}
+
+.global_nav_item:hover {
+  color: #42210b;
+  background: #fff;
+}
+
+.footer {
+  color: #fff;
+  background-color: #251e19;
+  height: 75px;
+  padding-bottom: 10px;
+}
+
+.footer_nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer_nav_line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer_nav_item {
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.footer_logo {
+  width: 80px;
+}
+
+.footer_copyright_text {
+  font-size: 10px;
+}
+
 html {
   height: 100%;
 }
@@ -9,18 +87,28 @@ body {
 .center {
   text-align: center;
 }
+
 .section_inner {
   padding: 50px 10% 30px;
 }
+
 .section_title {
   font-family: "Noto Serif JP", serif;
+  font-optical-sizing: auto;
   text-align: center;
   margin-bottom: 50px;
 }
+
+.section_title h2 {
+  font-weight: bold;
+}
+
 .menu_section {
   background: url("../images/sample_menu_bg.jpg") no-repeat bottom;
+  background-size: 100%;
   background-attachment: fixed;
 }
+
 .menu_title {
   display: inline-block;
   font-family: "Noto Serif JP", serif;
@@ -30,26 +118,19 @@ body {
   border-bottom: solid #42210b 1px;
   margin-bottom: 20px;
 }
+
 .menu_list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   padding-bottom: 50px;
 }
-.recommended_menu_item {
-  width: 49%;
-  display: flex;
-  flex-direction: row-reverse;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
-}
-.menu_item_title {
-  font-size: 18px;
-  font-family: "Noto Serif JP", serif;
-}
+
 .coffee_menu {
   background: #fff;
   padding: 20px;
 }
+
 .coffee_menu_list_item {
   width: 49%;
   display: flex;
@@ -57,14 +138,28 @@ body {
   align-items: center;
   padding: 10px;
 }
+
+.coffee_menu_item_title {
+  font-size: 18px;
+  font-family: "Noto Serif JP", serif;
+}
+
+.coffee_menu_image {
+  width: 20%;
+  border-radius: 50%;
+  object-fit: contain;
+}
+
 .coffee_menu_image {
   width: 20%;
   border-radius: 50%;
 }
+
 .coffee_menu_content {
   width: 80%;
   padding: 10px;
 }
+
 .btn {
   display: inline-block;
   padding: 0.8rem 2rem;
