Specify a font family for the page

--- a/css/sale.css
+++ b/css/sale.css
@@ -78,6 +78,7 @@
 
 html {
   height: 100%;
+  font-family: "Hiragino Kaku Gothic ProN", Arial, Helvetica, sans-serif;
 }
 body {
   position: relative;
