--- a/css/sale.css
+++ b/css/sale.css
@@ -161,6 +161,10 @@ body {
   padding: 10px;
 }
 
+input[type="number"] {
+  width: 60px;
+}
+
 .btn {
   display: inline-block;
   padding: 0.8rem 2rem;
