--- a/css/contact_validation.css
+++ b/css/contact_validation.css
@@ -68,7 +68,7 @@ select {
   padding: 20px;
 }
 
-header_nav {
+.header_nav {
   background: linear-gradient(90deg, #fff 20%, rgba(0, 0, 0, 0.6) 60%);
   display: flex;
   flex-direction: row-reverse;
@@ -90,4 +90,7 @@ header_nav {
   color: #fff;
   text-decoration: none;
   text-align: center;
+}
+.display_none {
+  display: none;
 }
