--- a/css/contact_validation.css
+++ b/css/contact_validation.css
@@ -63,15 +63,18 @@ select {
 }
 
 .alert {
-  background-color: #d14539;
-  color: #fff;
+  color: #d14539;
   padding: 20px;
+}
+
+.invalid_input {
+  background-color: rgba(230, 169, 171, 0.5);
 }
 
 .header_nav {
   background: linear-gradient(90deg, #fff 20%, rgba(0, 0, 0, 0.6) 60%);
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: space-between;
   align-items: stretch;
   height: 60px;
@@ -81,6 +84,9 @@ select {
 }
 .drop_menu_btn {
   height: 60px;
+  background-color: transparent;
+  color: #fff;
+  border: none;
 }
 .drop_menu {
   background: #42210b;
